developerProject/force-app/main/default/objects/OJ_PM__Margin_Rate__c/OJ_PM__Margin_Rate__c.object-meta.xml
<CustomObject>
    <label>Margin Rate</label>
    <nameField>
        <label>Margin Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GenericMarginRates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>