developerProject/force-app/main/default/objects/OJ_PM__Margin_Rate__c/fields/OJ_PM__Cash_Bracket_Upper_Limit__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Cash_Bracket_Upper_Limit__c</fullName>
    <label>Cash Bracket Upper Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>