developerProject/force-app/main/default/objects/OJ_PM__Margin_Rate__c/fields/OJ_PM__Introducer_Asset__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Introducer_Asset__c</fullName>
    <label>Introducer Asset</label>
    <referenceTo>OJ_PM__Introducer_Asset__c</referenceTo>
    <relationshipLabel>Margin Rates</relationshipLabel>
    <relationshipName>MarginRates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>